messaging_app/ingress.yaml
apiVersion: networking.k8s.io/vi
kind: Ingress
metadata: 
 name: messaging_app-ingress
annotations:
kubernetes.io/ingress.class: nginx
spec:
 tls:
 - secretName:tls-secret
 rules:
 - host: messaging_app.example.com
 - http:
    paths:
    - path: /api/
      pathType: Prefix
      backend:
       service:
        name: django-api-service
        port:
         number: 8000
    - path : /api/
      pathType: Prefix
      backend:
       service:
        name: django-api-service
        port:
        number: 8000
